# Skull_Stripping

./: README  README~
GUI_Qt/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Generate_CLP/src/: CMakeLists.txt  main.cxx  main.xml
Line_Parsing_Arguements/src/: CMakeLists.txt  main.cxx
