CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# Configuration du projet
PROJECT( skull )

FIND_PACKAGE(GenerateCLP REQUIRED)
INCLUDE(${GenerateCLP_USE_FILE})

FIND_PACKAGE(ITK)
IF(ITK_FOUND) 
  INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND) 
  MESSAGE(FATAL_ERROR
	  "ITK not found")
ENDIF(ITK_FOUND)

GENERATECLP(main.cxx main.xml)

ADD_EXECUTABLE( skull main.cxx )

TARGET_LINK_LIBRARIES(skull ITKCommon ITKIO)
